--- a/Docker/development/docker-compose.coolify.yml
+++ b/Docker/development/docker-compose.coolify.yml
@@ -4,7 +4,7 @@ services:
   api:
     build:
       context: ../../API
-      dockerfile: ./Dockerfile.dev
+      dockerfile: Dockerfile.dev
     container_name: 'updater-api-dev'
     restart: always
     depends_on:
